--- a/stylesheets/output.css
+++ b/stylesheets/output.css
@@ -1,6 +1,6 @@
 body {
   background: #cc3300;
-  background-image: url("../images/bg.png"); }
+  background-image: url("https://wallpaperscraft.com/image/red_solid_light_bright_scarlet_65848_2048x1152.jpg"); }
 
 .container {
   width: 90vw;
